# BookIt

./: .env  .env.example  Dockerfile  README.md  alembic.ini  bookit.db  docker-compose.yml  pyproject.toml  render.yaml  requirements.txt  test_api.py
app/: main.py
app/core/: auth.py  config.py  dependencies.py  logging.py  security.py
app/db/: session.py
app/db/migrations/: env.py
app/db/migrations/versions/: 0802ab08b1b7_create_tables_for_postgresql.py  3be08a093053_create_tables_for_sqlite.py  458ae2f144c4_create_all_tables_for_postgresql.py
app/models/: booking.py  review.py  service.py  user.py
app/repositories/: booking_repo.py  review_repo.py  service_repo.py  user_repo.py
app/routers/: auth.py  bookings.py  reviews.py  services.py  users.py
app/schemas/: auth.py  booking.py  review.py  service.py  user.py
app/services/: booking_service.py  review_service.py  service_service.py  user_service.py
tests/: conftest.py  test_auth.py  test_booking_conflicts.py  test_permissions.py
